--- a/netlify.toml
+++ b/netlify.toml
@@ -5,15 +5,15 @@
   publish = "."
 
 [[redirects]]
-  # Redirect root to main app
-  from = "/"
+  # Handle client-side routing for the dating app
+  from = "/hinge-mvp.html"
   to = "/hinge-mvp.html"
   status = 200
 
 [[redirects]]
-  # Handle client-side routing
-  from = "/*"
-  to = "/hinge-mvp.html"
+  # Handle client-side routing for login demo
+  from = "/login-demo.html"
+  to = "/login-demo.html"
   status = 200
 
 [build.environment]
